--- a/src/components/Users/UsersList.css
+++ b/src/components/Users/UsersList.css
@@ -1,15 +1,12 @@
-.nameAdded {
+.users {
+  background-color: rgba(104, 6, 6, 0.377);
+  list-style: none;
   margin: 2rem auto;
   width: 90%;
-  max-width: 40rem;
+  max-width: 30rem;
 }
 
-.nameAdded ul {
-  list-style: none;
-  padding: 1rem;
-}
-
-.nameAdded li {
+.users li {
   border: 1px solid #ccc;
   margin: 0.5rem 0;
   padding: 0.5rem;
